# pitou-core

./: Cargo.toml  sample.css
src/: extra.rs  lib.rs  msg.rs  ser_de.rs
src/backend/: mod.rs  search.rs  ser_de.rs  transfer.rs
src/backend/fs_ops/: drive.rs  mod.rs
src/frontend/: extra.rs  mod.rs  msg.rs  ser_de.rs
src/fs_ops/: mod.rs
src/search/: fxns.rs  mod.rs  ops.rs
