[package]
name = "pitou-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = { version = "1.0.5", optional = true }
chrono = { version = "0.4.26", features = ["serde"] }
dirs = { version = "5.0.1", optional = true }
fs_extra = { version = "1.3.0", optional = true }
open = { version = "5.0.0", optional = true }
regex = "1.10.3"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"
serde_regex = "1.1.0"
sysinfo = { version = "0.30.7", optional = true }
tokio = { version = "1.29.1", features = ["full"], optional = true }
trash = { version = "4.0.0", optional = true }

[features]
backend = ["tokio", "async-recursion", "trash", "fs_extra", "open", "sysinfo", "dirs"]
frontend =  []
default = ["frontend"]